Style: Fix mode overflow

--- a/src/css/tabs/auxiliary.less
+++ b/src/css/tabs/auxiliary.less
@@ -26,11 +26,9 @@
 			z-index: 1000;
 		}
 		position: relative;
-		height: 70px;
 		padding-top: 1rem;
 		padding-left: 0;
 		padding-bottom: 0.5rem;
-		border-top: 1px solid #fff;
 		border-bottom: 1px solid var(--surface-500);
 		&:first-child {
 			border-top: 0;
@@ -128,7 +126,7 @@
         margin-bottom: 0.5rem;
         border-radius: 0.5rem;
         overflow: hidden;
-        height: 6.5rem;
+        min-height: 6.5rem;
 		.name {
             padding: 0.5rem;
 		}
@@ -156,7 +154,7 @@
 		.range {
             display: flex;
 			.channelInfo {
-				min-width: 8rem;
+                padding: 0 1.5rem;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -167,12 +165,10 @@
         width: 100%;
 	}
 	.link {
-        height: 100%;
 		padding-top: 1rem;
-		padding-left: 1rem;
 		padding-bottom: 0.5rem;
 		border-bottom: 1px solid var(--surface-500);
-		background-color: var(--surface-400);
+		background-color: var(--surface-200);
         display: flex;
         gap: 0.5rem;
 		&:first-child {
@@ -185,6 +181,12 @@
             a {
                 margin-top: 0.35rem;
             }
+        }
+        .modeInfo {
+            padding: 0 1.5rem;
+        }
+        .linkLogic {
+            margin-top: 0.25rem;
         }
 	}
 	.logic {
